--- a/style/style.css
+++ b/style/style.css
@@ -136,6 +136,13 @@ button:hover{
     font-weight: bold;
 }
 
+.listaEnemigos{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 25px;
+    margin: 30px 0;
+}
+
 .btnProducto{
     margin-top: 10px;
     padding: 5px 10px;
@@ -154,26 +161,23 @@ button:hover{
 }
 
 .tarjeta-enemigo {
-    background: #333232;
-    border: 2px solid #444;
-    padding: 15px;
-    border-radius: 12px;
+    background: var(--color-surface-panel);
+    border: 2px solid var(--color-border-subtle);
     text-align: center;
+    padding: 20px;
+    border-radius: 10px;
     cursor: pointer;
-    transition: transform 0.2s ease, border-color 0.2s ease;
-    color: white;
+    transition: border-color 0.2s ease;
 }
 
-.tarjeta-enemigo:hover {
-    transform: scale(1.04);
-    border-color: gold;
+.tarjeta-enemigo:hover{
+    border-color: var(--color-accent-gold);
 }
 
 .tarjeta-enemigo img {
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
     object-fit: contain;
-    margin-bottom: 8px;
 }
 
 
@@ -194,10 +198,12 @@ button:hover{
 .vs-text {
     font-size: 3rem;
     font-weight: bold;
+    color: var(--color-text-primary);
 }
 
 .mensaje-resultado {
     text-align: center;
-    margin: 8px 0;
     font-size: 1.3rem;
+    margin-bottom: 10px;
+
 }
